Fix nav achor tag color on small devices

--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -24,7 +24,7 @@
         flex: 1 1 100%;
     }
    
-    ul a {
+    nav ul a {
         color: var(--accent-color-2);  
     }
     
